fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 :root {
-	--layout-padding: 3em;
+	--layout-padding: 4em;
 	--heading-font-size: 1.1em;
 	/* Smaller Font Size */
+	--smaller-heading-font-size: 1em;
+	--light-gray-color: #888888;
 }
 
 /* layout */
@@ -22,20 +24,55 @@ body {
 	display: flex;
 	flex-direction: column;
 	font-size: var(--heading-font-size);
-	color: #888888;
+	color: var(--light-gray-color);
 	width: 12.5em;
 }
 
 .content__container__heading h1 {
-	font-weight: 600;
+	font-weight: 400;
 }
-
 
 .content__container__details{
 	display: flex;
 	flex-direction: column;
 	width: 60%;
 	margin-left: 10%;
+}
+
+.basic__content__container__details {
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	margin-left: 6.8em;
+	color: var(--light-gray-color);
+	height: 100%;
+}
+
+.basics__content__container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin-top: 2.5em;
+}
+
+.basics__content__img__container {
+	display: flex;
+	justify-content: center;
+	width: 25%;
+	height: 100%;
+}
+
+.basics__content__img__container .picture {
+	width: 100%;
+	height: 100%;
+}
+
+.content__container__details--gray {
+	display: flex;
+	flex-direction: column;
+	width: 60%;
+	margin-left: 10%;
+	color: var(--light-gray-color);
 }
 
 ul {
@@ -50,7 +87,7 @@ li {
 .second__heading {
 	font-size: var(--heading-font-size);
 	font-weight: 400;
-	color: #888888;
+	color: var(--light-gray-color);
 }
 
 
@@ -64,7 +101,7 @@ li {
 
 @media screen {
 	body {
-		line-height: 1.4;
+		line-height: 2em;
 		margin: 2.5em 0;
 	}
 }
@@ -75,17 +112,21 @@ li {
 }
 
 h1 {
-	font-size: 1.05em;
+	font-size: 1.3em;
 	margin-top: 0;
 }
 
 h2 {
-	font-size: 1.05em;
+	font-size: 1.3em;
 }
 
+/* span {
+	line-height: 2em;
+} */
+
 .heading--black {
-	font-size: var(--heading-font-size);
-	font-weight: 600;
+	font-size: 1.2em;
+	font-weight: 900;
 	color: black;
 }
 
@@ -144,7 +185,27 @@ blockquote {
 	border-radius: 50%;
 }
 
+@media screen and (max-width:950px) {
+	.basic__content__container__details {
+		width: 60%;
+	}
+
+	.basics__content__img__container {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		margin-top: 5em;
+	}
+}
+
 @media screen and (max-width:600px) {
+
+	.content__container__details--gray {
+		margin: 0;
+		width: 100%;
+		text-align: center;
+	}
+
 	.content__container {
 		text-align: center;
 		width: 100%;
@@ -163,7 +224,23 @@ blockquote {
 		font-size: 0.9em;
 	}
 
+	.basic__content__container__details {
+		width: 100%;
+		text-align: center;
+		margin: 0;
+	}
+
 	span {
 		width: 100%;
 	}
+
+	.heading--black {
+		font-size: var(--smaller-heading-font-size);
+	}
+
+	.second__heading {
+		font-size: var(--smaller-heading-font-size);
+	}
 }
+
+
